styled the page

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
             <div id="display"></div>
         </div>
         <div class="grid-container">
-            <button id="clear-btn">C</button>
-            <button id="delete-btn">&Del;</button>
+            <button id="clear-btn" class="clear-btn">C</button>
+            <button id="delete-btn" class="clear-btn">&#x232B;</button>
             <button class="operator-btn">/</button>
             <button class="operator-btn">*</button>
             <button class="number-btn">7</button>
